used common ChunkDAOUtils methods and several sonar cosmetic fixes